<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="415dp"
    android:layout_height="650dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    tools:layout_editor_absoluteY="1000dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="24dp"
            android:text="@string/how_intense_are_your_challenges"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="300dp"
            android:layout_height="185dp"
            android:background="@color/white"
            android:hint="@string/tell_us_what_s_bothering_you"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:minWidth="4dp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="40dp"
            android:text="@string/could_you_please_briefly_describe_your_daily_challenges"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="MissingConstraints" />

        <RatingBar

            android:id="@+id/ratingBar"
            android:layout_width="143dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/app_name"
            android:progressBackgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="147dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/listDivider"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_info_24"
                app:tint="@color/white" />
        </FrameLayout>


        <Button
            android:id="@+id/button5"
            android:layout_width="321dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="32dp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:onClick="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
